app/globals.css
@import url("https://api.fontshare.com/v2/css?f[]=clash-display@700&display=swap");

:root {
  --Main-10: #1b1d16;
  --Main-80: #cfd2c6;
  --bg: #12140f;
}

* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background: var(--bg);
  color: var(--Main-80);
  font-family: Roboto, sans-serif;
}

.homeBackground {
  min-height: 100vh;
  min-height: 100svh;
  position: relative;
  width: 100%;
  background-image: url("/Full-background.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

.heroTitle {
  position: absolute;
  width: 909px;
  height: 192px;
  left: 79px;
  top: 400px;
  margin: 0;
  font-family: "Clash Display", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 80px;
  line-height: 120%;
  color: #cfd2c6;
}

.sectionBreak {
  width: 100%;
  height: 120px;
  background:
    linear-gradient(180deg, #cfd2c6 0%, #aab09a 42%, #12140f 100%);
}

.eventsSection {
  position: relative;
  width: 100%;
  min-height: 1837px;
  background: #cfd2c6;
  padding: 0;
}

.eventsInner {
  position: relative;
  max-width: 1760px;
  margin: 0 auto;
  padding-top: 264px;
  padding-bottom: 80px;
}

.eventsHeading {
  position: absolute;
  width: 229px;
  height: 64px;
  left: 229px;
  top: 80px;
  margin: 0;
  font-family: "Clash Display", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 64px;
  line-height: 64px;
  color: #36392d;
}

.eventsGrid {
  display: grid;
  grid-template-columns: repeat(2, 868px);
  gap: 24px;
  justify-content: center;
}

.eventCard {
  position: relative;
  width: 868px;
  height: 637px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.eventCardFeatured {
  background-image: url("/Events%20page/images/Event-photo1.png");
}

.eventCard2 {
  background-image: url("/Events%20page/images/Event-photo2.png");
}

.eventCard3 {
  background-image: url("/Events%20page/images/Event-photo3.png");
}

.eventCard4 {
  background-image: url("/Events%20page/images/Event-photo4.png");
}

.eventOverlay {
  position: absolute;
  inset: 0;
  background: rgba(149, 157, 123, 0.8);
}

.eventTitle {
  position: absolute;
  left: 50%;
  top: 50%;
  margin: 0;
  transform: translate(-50%, -50%);
  font-family: "Clash Display", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 24px;
  text-align: center;
  color: #ffffff;
}

.ourTeamSection {
  position: relative;
  width: 100%;
  min-height: 1261px;
  background: #cfd2c6;
  padding: 0;
}

.whoAreWeSection {
  position: relative;
  width: 100%;
  min-height: 2920px;
  background: #cfd2c6;
  padding: 0;
}

.whoAreWeInner {
  position: relative;
  max-width: 1760px;
  margin: 0 auto;
  min-height: 2920px;
}

.whoAreWeSlogan {
  position: absolute;
  width: 425px;
  height: 64px;
  left: 229px;
  top: 200px;
  margin: 0;
  font-family: "Clash Display", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 64px;
  line-height: 64px;
  color: #36392d;
}

.whoAreWeIntroText {
  position: absolute;
  width: 570px;
  height: 135px;
  left: 1121px;
  top: 200px;
  margin: 0;
  font-family: Roboto, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  color: #36392d;
}

.whoAreWeArrowBtn {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 8px 2px;
  gap: 8px;
  position: absolute;
  width: 64px;
  height: 64px;
  left: 80px;
  top: 344px;
  border: 1px solid #36392d;
  border-radius: 64px;
  background: transparent;
}

.whoAreWeArrowBtnRight {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 7px 2px;
  gap: 8px;
  position: absolute;
  width: 64px;
  height: 64px;
  left: 168px;
  top: 344px;
  border: 1px solid #36392d;
  border-radius: 64px;
  background: transparent;
}

.whoAreWeArrowIcon {
  width: 20px;
  height: 8px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.whoAreWeGallery {
  position: absolute;
  width: 2117px;
  height: 433px;
  left: -197px;
  top: 448px;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 0;
  gap: 40px;
  overflow-x: scroll;
  overflow-y: hidden;
}

.whoAreWeInteriorImage1 {
  width: 651px;
  height: 433px;
  background: url("/Who%20are%20we/restaurant-interior.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.whoAreWeInteriorImage2 {
  width: 651px;
  height: 433px;
  background: url("/Who%20are%20we/restaurant-interior2.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.whoAreWeInteriorImage3 {
  width: 651px;
  height: 433px;
  background: url("/Who%20are%20we/group-friends-eating-restaurant.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  flex: none;
  order: 2;
  flex-grow: 0;
}

.whoAreWeInteriorImage4 {
  width: 651px;
  height: 433px;
  background: url("/Who%20are%20we/zoshua-colah-lyBnPZxqTAQ-unsplash%20Photo%20Zoshua%20Colaha%20on%20a%20href=httpsunsplash.comphotosdelicious-pizza-topped-with-va.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  flex: none;
  order: 3;
  flex-grow: 0;
}

.whoAreWeMenuSlogan {
  position: absolute;
  width: 184px;
  height: 64px;
  left: 868px;
  top: 961px;
  margin: 0;
  font-family: "Clash Display", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 64px;
  line-height: 64px;
  color: #36392d;
}
/* ... */

